deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iot-pong-svc
  namespace: dev
spec:
  type: NodePort
  selector:
    app: iot-pong
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 30007
