deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-pong-ingress
  labels:
    app: iot-pong
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: iot-pong-svc
            port:
              number: 80
